--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,7 +1,7 @@
 - title: General Information
   type: map
   contents:
-    - name: Apratim Rastogi
+    - name: Full Name
       value: Apratim Rastogi
     - name: Date of Birth
       value: 14th March 1879
