Made several changes to CV page and others

--- a/_config.yml
+++ b/_config.yml
@@ -415,10 +415,11 @@ jekyll_get_json:
     json: assets/json/resume.json # it can also be an url
 jsonresume:
   - basics
-  - work
+  #- work
   - education
   - publications
   - projects
+  - profiles
   - volunteer
   - awards
   - certificates
