--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -65,7 +65,7 @@
   type: time_table
   contents:
     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
+      year: 
       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
